--- a/index.html
+++ b/index.html
@@ -565,23 +565,33 @@ function wireRow(row){
       clearTimeout(setStatus._t); setStatus._t = setTimeout(()=>{ status.textContent=''; }, 4000);
     }
 
-    const pdfInput = document.getElementById('pdfFile');
-    pdfInput.addEventListener('change', async () => {
-      const file = pdfInput.files && pdfInput.files[0];
-      if(!file) return;
-      try {
-        setStatus(`Parsing “${file.name}”…`);
-        const parsed = await parseToInteractiveChecklist(file);
-        applyRows(parsed.rows);
-        const baseName = file.name.replace(/\.pdf$/i, '') || 'Checklist';
-        document.getElementById('title').textContent = baseName;
-        updateDocTitle();
-        setStatus(`Loaded ${parsed.rows.length} row(s) from PDF.`);
-      } catch (e) {
-        console.error(e);
-        setStatus('Failed to parse PDF: ' + (e?.message || e), true);
-      } finally {
-        pdfInput.value = '';
+const pdfInput = document.getElementById('pdfFile');
+pdfInput.addEventListener('change', async () => {
+  const file = pdfInput.files && pdfInput.files[0];
+  if (!file) return;
+  try {
+    setStatus(`Parsing “${file.name}”…`);
+    const parsed = await parseToInteractiveChecklist(file);
+
+    // 🔒 tell the sync layer a DOM rebuild is starting
+    window.syncStartRebuild?.();
+
+    // your existing DOM rebuild
+    applyRows(parsed.rows);
+
+    // update title from file name (unchanged)
+    const baseName = file.name.replace(/\.pdf$/i, '') || 'Checklist';
+    document.getElementById('title').textContent = baseName;
+    updateDocTitle();
+    setStatus(`Loaded ${parsed.rows.length} row(s) from PDF.`);
+
+    // ☁️ push imported data to Firestore + apply any remote that arrived mid-rebuild
+    await window.syncEndRebuild?.();
+  } catch (e) {
+    console.error(e);
+    setStatus('Failed to parse PDF: ' + (e?.message || e), true);
+  } finally {
+    pdfInput.value = '';
       }
     });
 
@@ -746,16 +756,14 @@ function wireRow(row){
   </script>
     </div>
   </div>
-<!-- Realtime Sync for Lineout (paste before </body>) -->
+<!-- ===================== LINEOUT SYNC BUNDLE (drop in before </body>) ===================== -->
 <script type="module">
-  /***** Firebase CDN imports *****/
+  /***** Firebase (CDN) *****/
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js";
   import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js";
-  import {
-    getFirestore, doc, setDoc, getDoc, onSnapshot
-  } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
+  import { getFirestore, doc, setDoc, getDoc, onSnapshot, writeBatch, collection } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
 
-  /***** YOUR CONFIG (from Firebase console) *****/
+  /***** Your config *****/
   const firebaseConfig = {
     apiKey: "AIzaSyB-GAwSnt5mplQQ-0GV78Ud1v-JfqFuz0o",
     authDomain: "lineout-3a851.firebaseapp.com",
@@ -766,135 +774,194 @@ function wireRow(row){
     measurementId: "G-14R61YSV5V"
   };
 
-  /***** Init + Anonymous Auth *****/
+  /***** Init + auth *****/
   const app  = initializeApp(firebaseConfig);
   const db   = getFirestore(app);
   const auth = getAuth(app);
   await signInAnonymously(auth);
 
-  /***** Room (doc) from URL hash *****/
-  const ROOM = (location.hash.slice(1) || "default").toLowerCase();
+  /***** Room / document *****/
+  const ROOM   = (location.hash.slice(1) || "default").toLowerCase();
   const docRef = doc(db, "lineouts", ROOM);
 
-  /***** Helpers: read/write page state *****/
-  function serializeState() {
-    // Editable title
-    const title = document.querySelector('h1[contenteditable="true"]')?.innerText?.trim() || "";
+  /***** DOM helpers *****/
+  const $ = (sel, root=document) => root.querySelector(sel);
+  const $$ = (sel, root=document) => Array.from(root.querySelectorAll(sel));
 
-    // Optional background class (if you use bg-* classes on <body>)
+  /***** Read page → state *****/
+  function serializeState() {
+    const title = $('h1[contenteditable="true"]')?.innerText?.trim() || "";
     const bgCls = [...document.body.classList].find(c => c.startsWith("bg-")) || null;
 
-    // Table rows: your header order is [#, Location, Tech, Spliced, Balanced, Incomplete, Notes]
-    const rows = [...document.querySelectorAll("#rows tr")].map(tr => {
-      const tds = tr.querySelectorAll("td");
+    // assumes your table body has id="rows"
+    const rows = $$('#rows tr').map(tr => {
+      const tds = tr.querySelectorAll('td');
       return {
-        number: tds[0]?.textContent?.trim() ?? "",     // # (stable id)
-        location: tds[1]?.textContent?.trim() ?? "",   // Location
-        tech: tds[2]?.textContent?.trim() ?? "",       // Tech
-        spliced: tr.querySelector("input.spliced")?.checked ?? false,
-        balanced: tr.querySelector("input.balanced")?.checked ?? false,
-        incomplete: tr.querySelector("input.incomplete")?.checked ?? false,
-        notes: tr.querySelector("textarea.notes-input")?.value ?? ""
+        number:     tds[0]?.textContent?.trim() ?? "",   // stable id (first column)
+        location:   tds[1]?.textContent?.trim() ?? "",
+        tech:       tds[2]?.textContent?.trim() ?? "",
+        spliced:    tr.querySelector('input.spliced')?.checked ?? false,
+        balanced:   tr.querySelector('input.balanced')?.checked ?? false,
+        incomplete: tr.querySelector('input.incomplete')?.checked ?? false,
+        notes:      tr.querySelector('textarea.notes-input')?.value ?? ""
       };
     });
 
     return { title, bgCls, rows, ts: Date.now() };
   }
 
+  /***** Apply state → page *****/
   function applyState(state) {
     if (!state) return;
 
-    // Title
-    const titleEl = document.querySelector('h1[contenteditable="true"]');
-    if (titleEl && typeof state.title === "string" && titleEl.innerText !== state.title) {
+    const titleEl = $('h1[contenteditable="true"]');
+    if (titleEl && typeof state.title === 'string' && titleEl.innerText !== state.title) {
       titleEl.innerText = state.title;
       if (state.title) document.title = state.title;
     }
 
-    // Background (optional)
     if (state.bgCls) {
-      document.body.classList.forEach(c => c.startsWith("bg-") && document.body.classList.remove(c));
+      document.body.classList.forEach(c => c.startsWith('bg-') && document.body.classList.remove(c));
       document.body.classList.add(state.bgCls);
     }
 
-    // Rows: match by first cell (#)
     const byNum = new Map((state.rows || []).map(r => [String(r.number), r]));
-    document.querySelectorAll("#rows tr").forEach(tr => {
-      const num = tr.querySelector("td")?.textContent?.trim() || "";
+    $$('#rows tr').forEach(tr => {
+      const num = tr.querySelector('td')?.textContent?.trim() || "";
       const data = byNum.get(String(num));
       if (!data) return;
-
-      const sp = tr.querySelector("input.spliced");     if (sp) sp.checked = !!data.spliced;
-      const ba = tr.querySelector("input.balanced");    if (ba) ba.checked = !!data.balanced;
-      const ic = tr.querySelector("input.incomplete");  if (ic) ic.checked = !!data.incomplete;
-      const nt = tr.querySelector("textarea.notes-input"); if (nt && nt.value !== data.notes) nt.value = data.notes;
+      const sp = tr.querySelector('input.spliced');     if (sp) sp.checked = !!data.spliced;
+      const ba = tr.querySelector('input.balanced');    if (ba) ba.checked = !!data.balanced;
+      const ic = tr.querySelector('input.incomplete');  if (ic) ic.checked = !!data.incomplete;
+      const nt = tr.querySelector('textarea.notes-input'); if (nt && nt.value !== data.notes) nt.value = data.notes;
     });
 
-    // If your page tracks counts/highlights, trigger it (you have recalcCounts())
     if (typeof window.recalcCounts === "function") window.recalcCounts();
+  }
+
+  /***** Status helper *****/
+  function flash(msg) {
+    const s = $('#status');
+    if (!s) return;
+    s.textContent = msg;
+    if (msg.includes('✓')) setTimeout(() => (s.textContent = ''), 900);
   }
 
   /***** Debounced save *****/
   let saveTimer;
   function scheduleSave() {
     clearTimeout(saveTimer);
-    saveTimer = setTimeout(async () => {
-      const state = serializeState();
-      try {
-        await setDoc(docRef, state, { merge: true });
-        // Local backup for offline resilience
-        localStorage.setItem("lineout_backup_" + ROOM, JSON.stringify(state));
-        const s = document.getElementById("status");
-        if (s) { s.textContent = "Saved ✓"; setTimeout(() => (s.textContent = ""), 800); }
-      } catch (e) {
-        console.error("Save failed:", e);
-        const s = document.getElementById("status");
-        if (s) s.textContent = "Offline (local save)";
-      }
-    }, 300);
+    saveTimer = setTimeout(saveNow, 300);
+  }
+
+  async function saveNow() {
+    const state = serializeState();
+    try {
+      await setDoc(docRef, state, { merge: true });
+      localStorage.setItem("lineout_backup_" + ROOM, JSON.stringify(state));
+      flash("Saved ✓");
+    } catch (e) {
+      console.error("Save failed:", e);
+      flash("Offline (local save)");
+    }
+  }
+
+  /***** Rebuild-safe apply (avoid races during importer DOM writes) *****/
+  let lastRemote = null;
+  let rebuilding = false;
+
+  function safeApply(state) {
+    lastRemote = state || lastRemote;
+    if (rebuilding) return;     // defer until rebuild ends
+    applyState(state);
   }
 
   /***** Live updates *****/
   onSnapshot(docRef, (snap) => {
     const data = snap.data();
-    if (data) applyState(data);
+    if (data) safeApply(data);
   });
 
-  /***** Wire UI events to save *****/
+  /***** Wire user edits *****/
   document.addEventListener("change", (e) => {
-    // Checkboxes, selects, bg palette buttons (use data-bg on your color swatches if you have them)
     if (e.target.matches('input[type="checkbox"], select, [data-bg]')) scheduleSave();
   });
   document.addEventListener("input", (e) => {
     if (e.target.matches("textarea.notes-input, h1[contenteditable='true']")) scheduleSave();
   });
 
-  /***** First load *****/
+  /***** First load *****
+   * - pulls Firestore if exists
+   * - otherwise waits for first edit/import to create it
+   * - falls back to local cache when offline
+   */
   (async () => {
     try {
       const snap = await getDoc(docRef);
       if (snap.exists()) applyState(snap.data());
-      // If doc doesn't exist yet, it'll be created on first edit (scheduleSave)
     } catch (e) {
-      // Fallback to local cache if Firestore unreachable
       const cached = localStorage.getItem("lineout_backup_" + ROOM);
       if (cached) try { applyState(JSON.parse(cached)); } catch {}
     }
   })();
 
-  /***** Optional: lightweight Share button helper (works if you add a button with id="shareLink") *****/
-  const shareBtn = document.getElementById("shareLink");
-  if (shareBtn) {
-    shareBtn.addEventListener("click", async () => {
-      if (!location.hash) {
-        const name = prompt("Session name (letters/numbers):", "crew-a");
-        if (name) location.hash = name.toLowerCase();
-      }
-      const url = location.href;
-      try { await navigator.clipboard.writeText(url); alert("Link copied:\n" + url); }
-      catch { prompt("Copy this link:", url); }
+  /***** PUBLIC API for your importer (one-liners) *****/
+  // A) easiest: replace everything with a rows array and save
+  window.syncReplaceAllRows = async function syncReplaceAllRows(rowsArray) {
+    // update DOM to reflect rowsArray if you want immediate UI, or just save state with new rows
+    // here we only save; if you also rebuild DOM, wrap it with start/end (see B)
+    const state = serializeState();
+    state.rows = rowsArray;
+    state.ts = Date.now();
+    try {
+      await setDoc(docRef, state, { merge: true });
+      localStorage.setItem("lineout_backup_" + ROOM, JSON.stringify(state));
+      flash("Saved ✓");
+    } catch (e) {
+      console.error("Save failed:", e);
+      flash("Offline (local save)");
+    }
+  };
+
+  // B) if your importer rewrites the table DOM directly:
+  window.syncStartRebuild = function syncStartRebuild() { rebuilding = true; };
+  window.syncEndRebuild   = async function syncEndRebuild() {
+    rebuilding = false;
+    if (lastRemote) applyState(lastRemote);  // apply anything that arrived mid-rebuild
+    await saveNow();                         // push imported rows to cloud
+  };
+
+  // C) manual immediate save (rarely needed)
+  window.syncSaveNow = saveNow;
+
+  /***** Optional: subcollection mode for very large checklists (>1 MiB state) *****/
+  // Call this instead of syncReplaceAllRows when you have thousands of rows.
+  window.syncReplaceAllRowsBig = async function syncReplaceAllRowsBig(rowsArray) {
+    // rows go to /lineouts/{ROOM}/rows/{number}
+    const rowsCol = collection(db, "lineouts", ROOM, "rows");
+    const batch = writeBatch(db);
+    rowsArray.forEach(r => {
+      if (!r || r.number == null) return;
+      const rdoc = doc(rowsCol, String(r.number));
+      batch.set(rdoc, r, { merge: true });
     });
-  }
+    await batch.commit();
+    // also store metadata at the room doc
+    await setDoc(docRef, { title: $('h1[contenteditable="true"]')?.innerText?.trim() || "", ts: Date.now() }, { merge: true });
+    flash("Saved ✓");
+  };
+
+  /***** Optional: Share button helper (if you add <button id="shareLink">Share</button>) *****/
+  $('#shareLink')?.addEventListener('click', async () => {
+    if (!location.hash) {
+      const name = prompt('Session name (letters/numbers):','crew-a');
+      if (name) location.hash = name.toLowerCase();
+    }
+    const url = location.href;
+    try { await navigator.clipboard.writeText(url); alert("Link copied:\n" + url); }
+    catch { prompt("Copy this link:", url); }
+  });
 </script>
+<!-- =================== /LINEOUT SYNC BUNDLE =================== -->
 </body>
 </html>
