--- a/Index.html
+++ b/Index.html
@@ -758,10 +758,10 @@ function wireRow(row){
 
   // 1) Your Firebase config (paste your own keys here)
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT.firebaseapp.com",
-    projectId: "YOUR_PROJECT_ID",
-    appId: "YOUR_APP_ID"
+    apiKey: "AIzaSyCh1IHtkGbRS_OEx0XKPHyENyPJaAap_sA",
+    authDomain: "lineout-8e391.firebaseapp.com",
+    projectId: "lineout-8e391",
+    appId: "1:850375306655:web:17ef45c9c1fc5f5ce0a1aa"
   };
 
   const app = initializeApp(firebaseConfig);
